Добавлены новые сессии и токены в конфигурации; улучшена инициализация контейнера и установка пакетов

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,54 +6,58 @@
     "remoteUser": "vscode",
     "updateRemoteUserUID": true,
     "containerUser": "vscode",
-
     "remoteEnv": {
         "GIT_SSH_COMMAND": "ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null",
         "SYNC_LOCALHOST_KUBECONFIG": "true",
         "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}",
-        "VIRTUAL_ENV_PROMPT": "(venv) ",
+        "VIRTUAL_ENV_PROMPT": "($$$) ",
         "SHELL": "/bin/bash",
         "GPG_TTY": "/dev/pts/0",
         "GNUPGHOME": "/home/vscode/.gnupg",
         "SSH_AUTH_SOCK": "/run/host-services/ssh-auth.sock",
         "GPG_KEY": "oleg1203@gmail.com"
     },
-
     "customizations": {
         "vscode": {
             "settings": {
-                // Editor settings
-                "editor.formatOnSave": true,
-                "editor.formatOnSaveMode": "file",
-                "editor.defaultFormatter": "ms-python.black-formatter",
-                "editor.suggest.snippetsPreventQuickSuggestions": false,
-                "editor.suggest.insertMode": "replace",
-                "editor.suggestSelection": "first",
-                "editor.tabCompletion": "on",
-                "editor.acceptSuggestionOnCommitCharacter": true,
-                "editor.acceptSuggestionOnEnter": "on",
-                "editor.suggest.showMethods": true,
-                "editor.suggest.showFunctions": true,
-                "editor.suggest.showVariables": true,
-                "editor.suggest.showClasses": true,
-                "editor.quickSuggestions": {
-                    "other": true,
-                    "comments": true,
-                    "strings": true
+                "editor": {
+                    "codeActionsOnSave": "source.organizeImports,source.fixAll,source.fixAll.eslint",
+                    "formatOnSave": true,
+                    "formatOnType": true,
+                    "formatOnPaste": true,
+                    "defaultFormatter": "ms-python.black-formatter",
+                    "linkedEditing": true,
+                    "stickyScroll.enabled": true,
+                    "guides.bracketPairs": true,
+                    "bracketPairColorization.enabled": true,
+                    "suggest": {
+                        "snippetsPreventQuickSuggestions": false,
+                        "insertMode": "replace",
+                        "showMethods": true,
+                        "showFunctions": true,
+                        "showVariables": true,
+                        "showClasses": true
+                    }
                 },
-
-                // Files settings
+                "editor.formatOnSaveMode": "file",
                 "files.autoSave": "afterDelay",
                 "files.autoSaveDelay": 3000,
-
-                // Python settings
                 "python.formatting.provider": "black",
-                "python.formatting.blackArgs": ["--line-length", "88"],
+                "python.formatting.blackArgs": [
+                    "--line-length",
+                    "88"
+                ],
                 "python.linting.enabled": true,
                 "python.linting.pylintEnabled": true,
                 "python.linting.flake8Enabled": true,
-                "python.linting.flake8Args": ["--max-line-length=88", "--ignore=E203,W503"],
-                "python.sortImports.args": ["--profile", "black"],
+                "python.linting.flake8Args": [
+                    "--max-line-length=88",
+                    "--ignore=E203,W503"
+                ],
+                "python.sortImports.args": [
+                    "--profile",
+                    "black"
+                ],
                 "python.sortImports.path": "${workspaceFolder}/.venv/bin/isort",
                 "python.sortImports.organizeImports": true,
                 "python.analysis.languageServerMode": "default",
@@ -62,8 +66,6 @@
                 "python.analysis.autoSearchPaths": true,
                 "python.analysis.completeFunctionParens": true,
                 "python.analysis.typeCheckingMode": "basic",
-
-                // Testing settings
                 "python.testing.pytestEnabled": true,
                 "python.testing.unittestEnabled": false,
                 "python.testing.autoTestDiscoverOnSaveEnabled": true,
@@ -72,15 +74,29 @@
                     "--disable-warnings",
                     "--show-capture=stdout"
                 ],
-                "python.testing.autoTestLaunchPythonArgs": ["-m", "pytest"],
-                "python.testing.pytestArgs": ["--cov=.", "--cov-report=xml", "-v"],
-
-                // Coverage settings
+                "python.testing.autoTestLaunchPythonArgs": [
+                    "-m",
+                    "pytest"
+                ],
+                "python.testing.pytestArgs": [
+                    "--cov=.",
+                    "--cov-report=xml",
+                    "-v"
+                ],
                 "coverage-gutters.showGutterCoverage": true,
                 "coverage-gutters.showLineCoverage": true,
                 "coverage-gutters.showRulerCoverage": true,
-
-                // Git settings
+                "editor.suggestSelection": "first",
+                "editor.tabCompletion": "on",
+                "editor.acceptSuggestionOnCommitCharacter": true,
+                "editor.acceptSuggestionOnEnter": "on",
+                "editor.quickSuggestions": {
+                    "other": true,
+                    "comments": true,
+                    "strings": true
+                },
+                "extensions.autoUpdate": true,
+                "extensions.autoCheckUpdates": true,
                 "git.autofetch": true,
                 "git.confirmSync": false,
                 "git.enableCommitSigning": true,
@@ -90,27 +106,36 @@
                 "git.autoSync": true,
                 "git.name": "Oleg Kizyma",
                 "git.email": "oleg1203@gmail.com",
-
-                // Update settings
                 "update.mode": "default",
                 "update.channel": "insiders",
-                "extensions.autoUpdate": true,
-                "extensions.autoCheckUpdates": true,
-
-                // Remote settings
                 "remote.extensionKind": {
-                    "*": ["workspace"]
+                    "*": [
+                        "workspace"
+                    ]
                 },
                 "dev.containers.defaultExtensions": [],
                 "dev.containers.copyGitConfig": false,
                 "dev.containers.gitCredentialsHelper": "cache",
                 "dev.containers.workspaceMountConsistency": "cached",
-
-                // Editor actions
-                "editor.codeActionsOnSave": {
-                    "source.organizeImports": "explicit",
-                    "source.fixAll": "explicit",
-                    "source.fixAll.eslint": "explicit"
+                "github.copilot.includeFilePatterns": [],
+                "continue.includeFilePatterns": [],
+                "terminal.integrated": {
+                    "tabs": {
+                        "title": "${process}${separator}${sequence}",
+                        "description": "${task}${separator}${local}${separator}${cwd}",
+                        "separator": " - "
+                    },
+                    "defaultProfile": {
+                        "linux": "bash"
+                    },
+                    "shellIntegration": {
+                        "decorationsEnabled": "true",
+                        "enabled": "true"
+                    },
+                    "fontSize": "14",
+                    "fontFamily": "Menlo, Monaco, 'Courier New', monospace",
+                    "cursorBlinking": "true",
+                    "cursorStyle": "line"
                 }
             },
             "extensions": [
@@ -118,6 +143,7 @@
                 "ms-python.vscode-pylance",
                 "ms-python.black-formatter",
                 "ms-python.isort",
+                "ms-python.autopep8",
                 "ms-python.flake8",
                 "ms-azuretools.vscode-docker",
                 "batisteo.vscode-django",
@@ -133,24 +159,24 @@
                 "GitHub.vscode-github-actions",
                 "continue.continue",
                 "saoudrizwan.claude-dev",
-                "ryanluker.vscode-coverage-gutters"
+                "ryanluker.vscode-coverage-gutters",
+                "GitHub.copilot-chat",
+                "GitHub.copilot"
             ]
         }
     },
-
     "portsAttributes": {
         "9000": {
             "label": "Hello Remote World",
             "onAutoForward": "notify"
         }
     },
-
+    "initializeCommand": "mkdir -p ${localWorkspaceFolder}/.continue",
     "mounts": [
         "source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached",
         "source=${localEnv:HOME}/.gnupg,target=/home/vscode/.gnupg,type=bind,consistency=cached",
         "source=${localWorkspaceFolder}/.continue,target=/home/vscode/.continue,type=bind,consistency=cached"
     ],
-
     "features": {
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest",
@@ -165,26 +191,15 @@
             "userGid": "1000"
         }
     },
-
-    "initializeCommand": "mkdir -p ${localWorkspaceFolder}/.continue",
-    
     "onCreateCommand": "sudo apt-get update && sudo apt-get install -y gnupg2 pinentry-tty gpg-agent",
-    
     "postCreateCommand": [
         "/bin/bash",
         "-c",
         "chmod +x .devcontainer/init-scripts/init.sh && .devcontainer/init-scripts/init.sh"
     ],
-    
     "postStartCommand": [
         "/bin/bash",
         "-c",
         "until curl -s http://172.17.0.1:11434/api/health >/dev/null; do echo 'Waiting for Ollama...'; sleep 2; done && echo 'Ollama is ready!'"
-    ],
-    
-    "postSaveCommand": [
-        "/bin/bash",
-        "-c",
-        "if [ \"$CODE_FILE\" != \"\" ]; then black $CODE_FILE; fi"
     ]
 }
