Обновлены скрипты и зависимости для настройки виртуального окружения; добавлены основные зависимости для работы с моделями Qwen и Llama.

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,9 @@ python-lsp-server[all]==1.10.0
 transformers==4.33.0
 torch==2.0.1
 pytorch-lightning==1.8.5
+
+# Основные зависимости для модели
+torch>=2.0.1
+transformers>=4.33.0
+sentencepiece>=0.1.99
+accelerate>=0.20.3
