--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "Python 3",
     "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached",
     "workspaceFolder": "/workspace",
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.11",
+    "image": "mcr.microsoft.com/devcontainers/python:1-3.12",
     "remoteUser": "vscode",
     "updateRemoteUserUID": true,
     "containerUser": "vscode",
@@ -21,7 +21,10 @@
         "vscode": {
             "settings": {
                 "editor": {
-                    "codeActionsOnSave": "source.organizeImports,source.fixAll,source.fixAll.eslint",
+                    "codeActionsOnSave": {
+                        "source.organizeImports": true,
+                        "source.fixAll": true
+                    },
                     "formatOnSave": true,
                     "formatOnType": true,
                     "formatOnPaste": true,
